Fix selectize bug, when inline-block and overflow:hidden.

--- a/xadmin/static/xadmin/css/xadmin.form.css
+++ b/xadmin/static/xadmin/css/xadmin.form.css
@@ -188,3 +188,8 @@ img.field_img {
 .nav.nav-tabs {
   margin-bottom: 15px;
 }
+
+/** selectize **/
+.selectize-input {
+  vertical-align: bottom;
+}
